--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 @import "~bootstrap/scss/bootstrap";
 @import "~flag-icon-css/sass/flag-icon";
+// @import "~@fortawesome/fontawesome-free/scss/solid";
 
 @font-face {
   font-family: "got";
