--- a/src/pages/ChronologyPage/ChronologyPage.scss
+++ b/src/pages/ChronologyPage/ChronologyPage.scss
@@ -10,8 +10,16 @@
 }
 
 #space-div {
-  height: 110px;
+  height: 150px;
   width: 100%;
+}
+
+#vl {
+  height: 40px;
+  width: 100%;
+  border-right: 2px solid white;
+  // Position relative para poder ajustar la flecha
+  position: relative;
 }
 
 #cont-1 {
@@ -34,9 +42,29 @@
 #button-age {
   background-color: transparent;
   border: 2px solid white;
-  width: 35px;
-  height: 35px;
+  width: 45px;
+  height: 45px;
   border-radius: 50%;
   color: white;
   outline: none;
+}
+
+.arrow {
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+  position: absolute;
+  right: -6px;
+  top: calc(50% - 3px);
+}
+
+.up {
+  transform: rotate(-135deg);
+  -webkit-transform: rotate(-135deg);
+}
+
+.down {
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
 }
