--- a/src/pages/HousesPage/components/HouseDetail/HouseDetail.scss
+++ b/src/pages/HousesPage/components/HouseDetail/HouseDetail.scss
@@ -1,4 +1,11 @@
-.header-img {
+.header-img-house {
   max-width: 150px;
   max-height: 200px;
+}
+
+@media screen and (max-width: 576px) {
+  .header-img-house {
+    width: 100px;
+    height: 120px;
+  }
 }
