--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,6 @@
 .App {
-  width: 100%;
-  height: 100%;
+  max-width: 100vw;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -8,7 +8,7 @@
 }
 
 .App-header {
-  height: 100px;
+  height: 11vh;
   width: 100%;
   overflow: hidden;
 }
@@ -24,7 +24,7 @@
 .App-footer {
   position: fixed;
   bottom: 0;
-  height: 135px;
+  height: 15vh;
   display: flex;
   align-items: center;
 }
@@ -42,7 +42,7 @@ ul {
 }
 
 .list-with-scroll {
-  height: 200px;
+  max-height: 200px;
   overflow-y: auto;
   padding: 0;
 }
@@ -50,11 +50,15 @@ ul {
 // La reusamos en todas las paginas para añadir espacio arriba y abajo para
 // que se vean header y footer
 .make-space {
-  margin-top: 100px;
-  margin-bottom: 135px;
-  height: calc(100vh - 135px - 100px);
+  margin-top: 11vh;
+  margin-bottom: 15vh;
+  height: calc(100vh - 11vh - 15vh);
   overflow: auto;
   overflow-x: hidden;
+
+  &--no-footer {
+    height: calc(100vh - 11vh);
+  }
 }
 
 /* width */
@@ -74,8 +78,13 @@ ul {
 }
 
 // para que en detalles de personajes o casas no salga la barra de scroll
-#detail-container {
-  overflow: hidden;
+// #detail-container {
+// }
+
+@media screen and (min-width: 992px) {
+  #detail-container {
+    overflow: hidden;
+  }
 }
 
 // https://css-tricks.com/almanac/properties/s/scrollbar/
