--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -1,5 +1,4 @@
 .homepage {
-  // position: absolute;
   top: 50px;
   bottom: 150px;
   min-height: 100vh;
@@ -8,9 +7,26 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  //   overflow: auto;
-
+  font-size: 125px;
+  text-align: center;
   background-image: url("../../shared/assets/images/throne.jpg");
   background-size: cover;
   background-repeat: none;
+  background-position: center;
+}
+
+@media screen and (max-width: 992px) {
+  .homepage {
+    font-size: 100px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .homepage {
+    font-size: 80px;
+  }
+}
+@media screen and (max-width: 576px) {
+  .homepage {
+    font-size: 50px;
+  }
 }
