--- a/src/shared/components/Footer/Footer.scss
+++ b/src/shared/components/Footer/Footer.scss
@@ -1,7 +1,8 @@
-a {
+.footer-titles {
   font-size: 25px;
   text-decoration: none;
   color: white;
+  margin: 0;
 }
 
 a:hover {
@@ -11,4 +12,25 @@ a:hover {
 
 .space {
   padding-right: 100px;
+}
+
+.selected-link {
+  border-bottom: 2px solid white;
+  margin-bottom: 1px;
+}
+
+@media screen and (max-width: 992px) {
+  .footer-titles {
+    font-size: 20px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .footer-titles {
+    font-size: 15px;
+  }
+}
+@media screen and (max-width: 576px) {
+  .footer-titles {
+    font-size: 12px;
+  }
 }
