--- a/src/shared/components/Gallery/Gallery.scss
+++ b/src/shared/components/Gallery/Gallery.scss
@@ -1,4 +1,4 @@
-#frame {
+.frame {
   height: 209px;
   max-width: 200px;
   margin-bottom: 5px;
@@ -7,4 +7,21 @@
 p {
   font-size: 12px;
   color: white;
+}
+
+.hover-name {
+  display: none;
+  color: white;
+  font-size: 10px;
+  text-align: center;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.4);
+  padding: 15px 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+.image-gallery:hover + .hover-name {
+  display: block;
 }
