--- a/src/shared/components/Header/Header.scss
+++ b/src/shared/components/Header/Header.scss
@@ -18,15 +18,6 @@
   outline: none;
 }
 
-.flag-button {
-  color: white;
-  background-color: transparent;
-  border: none;
-  outline: none;
-  padding: 0;
-  margin-top: 8px;
-}
-
 #back-button {
   color: white;
   background-color: transparent;
@@ -35,6 +26,17 @@
   padding: 0;
 }
 
-.icon-header {
+.header-icons {
   font-size: 23px;
+  text-decoration: none;
+  color: white;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  padding: 0;
+  margin-top: 8px;
+
+  &--home {
+    font-size: 28px;
+  }
 }
